--- a/Retail_Managment_WPF_UI/App.xaml
+++ b/Retail_Managment_WPF_UI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Retail_Managment_WPF_UI"
-             StartupUri="Views/LoginView.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
