--- a/Retail_Managment_WPF_UI/MainWindow.xaml
+++ b/Retail_Managment_WPF_UI/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Go To Login" HorizontalAlignment="Left" Margin="285,168,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="419,168,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
