--- a/Retail_Managment_WPF_UI/App.xaml
+++ b/Retail_Managment_WPF_UI/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Retail_Managment_WPF_UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources\Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
